<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="BeautyDataBinding"/>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/smoothenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:gravity="start|center"
            android:textSize="@dimen/magic_text_size"
            android:text="@string/magic_smoothen"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/smoothenSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:progressDrawable="@drawable/magic_seekbar_progress_drawable"
            android:thumb="@drawable/magic_seekbar_thumb_selector"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/smoothenValueTextView"
            app:layout_constraintTop_toTopOf="@+id/smoothenResetImageView"
            app:layout_constraintBottom_toBottomOf="@+id/smoothenResetImageView" />

        <TextView
            android:id="@+id/smoothenValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:gravity="start|center"
            android:textSize="@dimen/magic_text_size"
            android:text="@string/magic_default_value"
            android:textColor="@android:color/white"
            android:maxLength="3"
            app:layout_constraintRight_toLeftOf="@+id/smoothenResetImageView"
            app:layout_constraintTop_toTopOf="@+id/smoothenResetImageView"
            app:layout_constraintBottom_toBottomOf="@+id/smoothenResetImageView" />

        <ImageView
            android:id="@+id/smoothenResetImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@mipmap/magic_reset"
            android:contentDescription="@string/magic_reset"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smoothenTextView" />

        <TextView
            android:id="@+id/whitenTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="start|center"
            android:textSize="@dimen/magic_text_size"
            android:text="@string/magic_whiten"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/smoothenResetImageView"/>

        <SeekBar
            android:id="@+id/whitenSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxHeight="2dp"
            android:minHeight="2dp"
            android:progressDrawable="@drawable/magic_seekbar_progress_drawable"
            android:thumb="@drawable/magic_seekbar_thumb_selector"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/whitenValueTextView"
            app:layout_constraintTop_toTopOf="@+id/whitenResetImageView"
            app:layout_constraintBottom_toBottomOf="@+id/whitenResetImageView" />

        <TextView
            android:id="@+id/whitenValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:gravity="start|center"
            android:textSize="@dimen/magic_text_size"
            android:text="@string/magic_default_value"
            android:textColor="@android:color/white"
            android:maxLength="3"
            app:layout_constraintRight_toLeftOf="@+id/whitenResetImageView"
            app:layout_constraintTop_toTopOf="@+id/whitenResetImageView"
            app:layout_constraintBottom_toBottomOf="@+id/whitenResetImageView" />

        <ImageView
            android:id="@+id/whitenResetImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:background="@mipmap/magic_reset"
            android:contentDescription="@string/magic_reset"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/whitenTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>